--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@ buildscript {
     ext.http4k_version = "3.118.0"
     ext.junit_version = "5.4.0"
     ext.detekt_version = "1.0.0-RC14"
+    ext.dsljson_version = "1.8.5"
 }
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.21"
+    id "org.jetbrains.kotlin.kapt" version "1.3.21"
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC14"
 }
 
@@ -21,11 +23,14 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
+    implementation "com.dslplatform:dsl-json-java8:$dsljson_version"
     implementation "org.http4k:http4k-core:$http4k_version"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
     testImplementation "org.http4k:http4k-testing-hamkrest:$http4k_version"
+    testImplementation "org.http4k:http4k-format-jackson:$http4k_version"
+
+    kapt "com.dslplatform:dsl-json-java8:$dsljson_version"
 
     detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:$detekt_version"
 }
