--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.21"
     id "org.jetbrains.kotlin.kapt" version "1.3.21"
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC14"
+    id "idea"
 }
 
 group "io.eganjs"
@@ -40,4 +41,11 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
