--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,24 @@
 buildscript {
-    ext.http4k_version = "3.118.0"
+    ext.http4k_version = "3.138.0"
     ext.junit_version = "5.4.0"
     ext.detekt_version = "1.0.0-RC14"
-    ext.dsljson_version = "1.8.5"
+    ext.dsljson_version = "1.9.3"
 }
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.21"
-    id "org.jetbrains.kotlin.kapt" version "1.3.21"
+    id "org.jetbrains.kotlin.jvm" version "1.3.31"
+    id "org.jetbrains.kotlin.kapt" version "1.3.31"
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC14"
+    id "com.diffplug.gradle.spotless" version "3.23.0"
     id "idea"
 }
 
 group "io.eganjs"
 version "1.0-SNAPSHOT"
 
-sourceCompatibility = 11
-
 repositories {
-    mavenCentral()
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -32,15 +31,23 @@ dependencies {
     testImplementation "org.http4k:http4k-format-jackson:$http4k_version"
 
     kapt "com.dslplatform:dsl-json-java8:$dsljson_version"
-
-    detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:$detekt_version"
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+sourceCompatibility = 1.8
+
+compileKotlin { kotlinOptions.jvmTarget = "1.8" }
+compileTestKotlin { kotlinOptions.jvmTarget = "1.8" }
+
+kapt {
+    includeCompileClasspath = false
+    correctErrorTypes = true
 }
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+
+detekt { baseline = file("detekt-baseline.xml") }
+
+spotless {
+    kotlin { ktlint() }
+    groovyGradle { greclipse().configFile('greclipse.properties') }
 }
 
 idea {
