--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Mar 18 20:57:51 GMT 2019
+#Wed Apr 24 09:36:49 BST 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.4-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
+zipStoreBase=GRADLE_USER_HOME
